reference to SmartMesh manager API added

--- a/brun17using.bib
+++ b/brun17using.bib
@@ -44,7 +44,7 @@
 @Manual{smip_app_note,
   title        = {{SmartMesh IP Application Notes}},
   organization = {Linear Technology},
-  year         = {2015},
+  year         = {2017},
 }
 
 @InProceedings{watteyne15industrial,
@@ -147,5 +147,10 @@
   author={King, Jennifer and Perry, Christopher},
   year={2017},
   publisher={Washington, DC: ACEEE. aceee. org/research-report/a1701}
+}
+@Manual{smip_manager_api,
+  title        = {{SmartMesh IP Embedded Manager API Guide}},
+  organization = {Linear Technology},
+  year         = {2016},
 }
 @Comment{jabref-meta: databaseType:bibtex;}
