--- a/brun17using.tex
+++ b/brun17using.tex
@@ -293,7 +293,7 @@ Table~\ref{tab:msg_stats} summarizes the number of events and HRs gathered durin
         Each node in a \smip network periodically sends beacons to announce the presence of the network.
         When a mote wants to join a network, it listens for those beacons.
         Once it has heard a beacon, the new mote starts a security handshake with the network.
-        During that handshake, the \smip manager sends a \motecreate event notification over its serial port.
+        During that handshake, the \smip manager sends a \motecreate event notification over its serial port \cite{smip_manager_api}.
         This is the event we log\footnote{~Normally, each mote generates a single \motecreate event. Due to power issues at the manager side, the network restarted a couple of times and new events were created.}.
         It contains, among other information, the association between the newly-joined device's 8-byte MAC address and its 2-byte \moteId.
         The payload size of a \motecreate is 6B.
@@ -301,7 +301,7 @@ Table~\ref{tab:msg_stats} summarizes the number of events and HRs gathered durin
         In \smip terminology, a ``path'' is the link-layer resource that allows two neighbor nodes to communicate\footnote{~In more classical networking terminology, this is often referred to as a ``link''. We use the terms ``path'' and ``link'' interchangeably in this article.}.
         Each time a mote starts communicating with a new neighbor (e.g.~its routing parent), a \pathcreate event is produced.
         Similarly, each time a mote \textit{stops} communicating with a neighbor (e.g.~it changes routing parent), a \pathdelete event is produced.
-        We log both messages.
+        We log both messages \cite{smip_manager_api}.
         The payload size of a \pathcreate and \pathdelete are 9B.
     \item[-] \textbf{\HRDEVICE.}
         Each network device produces a \HRDEVICE every 15~min.
