#23 resolved, my CONICET afiliation added

--- a/brun17using.tex
+++ b/brun17using.tex
@@ -54,7 +54,7 @@
 
 \author[inria]{Keoma~Brun-Laguna}
     \ead{keoma.brun@inria.fr}
-\author[utn]{Ana~Laura~Diedrichs}
+\author[utn,conicet]{Ana~Laura~Diedrichs}
     \ead{ana.diedrichs@frm.utn.edu.ar}
 \author[udp]{Diego~Dujovne}
     \ead{diego.dujovne@mail.udp.cl}
@@ -71,6 +71,7 @@
 \address[utn]{~Universidad Tecnol\'ogica Nacional (UTN), Mendoza, Argentina}
 \address[udp]{~Universidad Diego Portales, Santiago, Chile}
 \address[uoc]{~Universitat Oberta de Catalunya, Barcelona, Catalonia, Spain}
+\address[conicet]{~CONICET, Mendoza, Argentina}
 
 \begin{abstract}
 We deploy two low-power wireless networks, one in a \agri setting (a peach orchard), one in a \building.
