--- a/brun17using.tex
+++ b/brun17using.tex
@@ -686,6 +686,7 @@ We attribute the higher churn in the \building deployment to the presence of sig
 
 This stability can largely be attributed to the use of channel hopping.
 Changing frequency for each frame is known to efficiently combat multi-path fading and external interference~\cite{watteyne09reliability}, the major causes of instability.
+If channel hopping was not used, selecting links with high PDR would not be sufficient as they could be affected by external interference at any time and become unstable.
 It does not contradict the findings of~\cite{srinivasan08beta}, it just means that link-layer retransmissions can efficiently cope with link burstiness, and that the multi-hop topology can remain very stable.
 
 %==============================================================================
