changing heatmap format to pdf

--- a/brun17using.tex
+++ b/brun17using.tex
@@ -448,7 +448,7 @@ We can clearly observe the PDR drop of the IEEE802.15.4 links that share the sam
 Yet, despite the high external interference, the \building deployment exhibits 100\% end-to-end reliability (as detailed in Section~\ref{sec:net_reliability}), underlying the resiliency of \smip to external interference.
 
 \begin{figure}  
-    \includegraphics[width=\columnwidth]{heatmap.png}
+    \includegraphics[width=\columnwidth]{heatmap.pdf}
     \caption{Nearby IEEE802.11 networks impact the performance of the deployment}
     \label{fig:heatmap}
 \end{figure}
