--- a/brun17using.bib
+++ b/brun17using.bib
@@ -1,11 +1,11 @@
 % Encoding: windows-1252
 
 @Article{watteyne16peach,
-  author       = {Watteyne, Thomas and Diedrichs, Ana Laura and Brun-Laguna, Keoma and Chaar, Javier Emilio and Dujovne, Diego and Taffernaberry, Juan Carlos and Mercado, Gustavo},
-  title        = {{PEACH: Predicting Frost Events in Peach Orchards Using IoT Technology}},
-  journal      = {{EAI Endorsed Transactions on the Internet of Things}},
-  year         = {2016},
-  month        = {June},
+  author  = {Watteyne, Thomas and Diedrichs, Ana Laura and Brun-Laguna, Keoma and Chaar, Javier Emilio and Dujovne, Diego and Taffernaberry, Juan Carlos and Mercado, Gustavo},
+  title   = {{PEACH: Predicting Frost Events in Peach Orchards Using IoT Technology}},
+  journal = {{EAI Endorsed Transactions on the Internet of Things}},
+  year    = {2016},
+  month   = {June},
 }
 
 @InProceedings{watteyne09reliability,
@@ -22,7 +22,7 @@
 @InProceedings{watteyne10mitigating,
   author       = {Watteyne, Thomas and Lanzisera, Steven and Mehta, Ankur and Pister, Kristofer SJ},
   title        = {{Mitigating Multipath Fading through Channel Hopping in Wireless Sensor Networks}},
-  booktitle    = {IEEE International Conference on Communications (ICC)},
+  booktitle    = {International Conference on Communications (ICC)},
   year         = {2010},
   pages        = {1--5},
   address      = {Cape Town, South Africa},
@@ -43,7 +43,7 @@
 
 @Manual{smip_app_note,
   title        = {{SmartMesh IP Application Notes}},
-  organization = {Linear Technology},
+  organization = {Analog Devices},
   year         = {2017},
 }
 
@@ -59,19 +59,19 @@
 }
 
 @Book{saunders07antennas,
-  title        = {{Antennas and Propagation for Wireless Communication Systems}},
-  publisher    = {Wiley-Blackwell},
-  year         = {2007},
-  author       = {Saunders, Simon R. and Arag\'on-Zavala, Alejandro},
-  edition      = {2nd},
+  title     = {{Antennas and Propagation for Wireless Communication Systems}},
+  publisher = {Wiley-Blackwell},
+  year      = {2007},
+  author    = {Saunders, Simon R. and Arag\'on-Zavala, Alejandro},
+  edition   = {2nd},
 }
 
 @MastersThesis{zats10wireless,
-  author       = {Zats, Samuel},
-  title        = {{Wireless Sensor Networks Scaling and Deployment in Industrial Automation}},
-  school       = {University of California, Berkeley},
-  year         = {2010},
-  month        = {13 May},
+  author = {Zats, Samuel},
+  title  = {{Wireless Sensor Networks Scaling and Deployment in Industrial Automation}},
+  school = {University of California, Berkeley},
+  year   = {2010},
+  month  = {13 May},
 }
 
 @TechReport{rfc3626,
@@ -97,7 +97,7 @@
 @InProceedings{brun16intuitive,
   author       = {Brun-Laguna, Keoma and Diedrichs, Ana Laura and Dujovne, Diego and L\'eone, R\'emy and Vilajosana, Xavier and Watteyne, Thomas},
   title        = {{(Not so) Intuitive Results from a Smart Agriculture Low-Power Wireless Mesh Deployment}},
-  booktitle    = {ACM International Conference on Mobile Computing and Networking (MobiCom), Workshop on Challenged Networks (CHANTS)},
+  booktitle    = {International Conference on Mobile Computing and Networking (MobiCom), Workshop on Challenged Networks (CHANTS)},
   year         = {2016},
   pages        = {25--30},
   address      = {New York, NY, USA},
@@ -105,50 +105,47 @@
   organization = {ACM},
 }
 
-@inproceedings{barrenetxea08hitchhiker,
+@InProceedings{barrenetxea08hitchhiker,
   author       = {Barrenetxea, Guillermo and Ingelrest, Fran\c{c}ois and Schaefer, Gunnar and Vetterli, Martin},
-  title        = {The Hitchhiker's Guide to Successful Wireless Sensor Network Deployments},
-  booktitle    = {Proceedings of the 6th ACM Conference on Embedded Network Sensor Systems},
-  series       = {SenSys '08},
+  title        = {{The Hitchhiker's Guide to Successful Wireless Sensor Network Deployments}},
+  booktitle    = {Conference on Embedded Network Sensor Systems (SenSys)},
   year         = {2008},
-  isbn         = {978-1-59593-990-6},
-  location     = {Raleigh, NC, USA},
   pages        = {43--56},
-  numpages     = {14},
-  acmid        = {1460418},
-  publisher    = {ACM},
-  address      = {New York, NY, USA},
-  keywords     = {architecture, deployment, environmental monitoring, implementation, wireless sensor network},
+  address      = {Raleigh, NC, USA},
+  organization = {ACM},
 }
 
-@article{de2016ieee,
-  title={IEEE 802.15. 4e: A survey},
-  author={De Guglielmo, Domenico and Brienza, Simone and Anastasi, Giuseppe},
-  journal={Computer Communications},
-  volume={88},
-  pages={1--24},
-  year={2016},
-  publisher={Elsevier}
+@Article{deguglielmo16ieee,
+  author    = {De Guglielmo, Domenico and Brienza, Simone and Anastasi, Giuseppe},
+  title     = {{IEEE 802.15.4e: A survey}},
+  journal   = {Computer Communications},
+  year      = {2016},
+  volume    = {88},
+  pages     = {1--24},
+  publisher = {Elsevier},
 }
 
-@article{ojha2015wireless,
-  title={Wireless sensor networks for agriculture: The state-of-the-art in practice and future challenges},
-  author={Ojha, Tamoghna and Misra, Sudip and Raghuwanshi, Narendra Singh},
-  journal={Computers and Electronics in Agriculture},
-  volume={118},
-  pages={66--84},
-  year={2015},
-  publisher={Elsevier}
+@Article{ojha15wireless,
+  author    = {Ojha, Tamoghna and Misra, Sudip and Raghuwanshi, Narendra Singh},
+  title     = {{Wireless Sensor Networks for Agriculture: The State-of-the-Art in Practice and Future Challenges}},
+  journal   = {Computers and Electronics in Agriculture},
+  year      = {2015},
+  volume    = {118},
+  pages     = {66--84},
+  publisher = {Elsevier},
 }
-@misc{king2017smart,
-  title={Smart Buildings: Using Smart Technology to Save Energy in Existing Buildings},
-  author={King, Jennifer and Perry, Christopher},
-  year={2017},
-  publisher={Washington, DC: ACEEE. aceee. org/research-report/a1701}
+
+@Misc{king17smart,
+  author    = {King, Jennifer and Perry, Christopher},
+  title     = {{Smart Buildings: Using Smart Technology to Save Energy in Existing Buildings}},
+  year      = {2017},
+  publisher = {American Council for an Energy-Efficient Economy (ACEEE)},
 }
+
 @Manual{smip_manager_api,
   title        = {{SmartMesh IP Embedded Manager API Guide}},
-  organization = {Linear Technology},
+  organization = {Analog Devices},
   year         = {2016},
 }
+
 @Comment{jabref-meta: databaseType:bibtex;}
