--- a/brun17using.tex
+++ b/brun17using.tex
@@ -213,7 +213,7 @@ Finally, Section~\ref{sec:conclusion} concludes this article and discusses furth
 
 % characterization of smart agriculture and 
 
-Previous work on \agri~\cite{ojha2015wireless} has shown the importance of low-power wireless technologies to easily deploy wireless sensor networks in the field.
+Previous work on \agri~\cite{ojha15wireless} has shown the importance of low-power wireless technologies to easily deploy wireless sensor networks in the field.
 The less current the motes draw on average, the longer the network operates without changing batteries.
 Wire-like network reliability is important in \agri applications as the data feeds productivity decision processes and which trigger actions in real time (frost detection is an example).
 Loosing data is not an option.
@@ -221,12 +221,12 @@ The key requirements for a \agri application is low maintenance, energy-efficien
 
 % smart building deployments
 
-Smart buildings save energy by automating controls and optimizing systems which is adding value to leasing and sales of properties~\cite{king2017smart}.
+Smart buildings save energy by automating controls and optimizing systems which is adding value to leasing and sales of properties~\cite{king17smart}.
 \building applications also have to face more interference problems, because the sensor network has to perform in the middle of other wireless technologies such as Wifi and Bluetooth, sharing the spectrum with them. 
 % interference + industrial internet + TSCH IEEE 802.15.4e
 The IEEE has released the 802.15.4e amendment that
 introduces a number of enhancements to the MAC
-layer of the original 802.15.4 standard to overcome its limitations \cite{de2016ieee}, 
+layer of the original 802.15.4 standard to overcome its limitations~\cite{deguglielmo16ieee}, 
 such as low reliability, no protection against interference and unbounded packet delay. 
 Also, IEEE 802.15.4e is considered the base of the industrial Internet of things stack.
 
@@ -457,7 +457,7 @@ We can clearly observe the PDR drop of the IEEE802.15.4 links that share the sam
 Yet, despite the high external interference, the \building deployment exhibits 100\% end-to-end reliability (as detailed in Section~\ref{sec:net_reliability}), underlying the resiliency of \smip to external interference.
 
 \begin{figure}  
-    \includegraphics[width=\columnwidth]{heatmap.pdf}
+    \includegraphics[width=\columnwidth]{heatmap.png}
     \caption{Nearby IEEE802.11 networks impact the performance of the deployment}
     \label{fig:heatmap}
 \end{figure}
