--- a/brun17using.tex
+++ b/brun17using.tex
@@ -216,7 +216,7 @@ Finally, Section~\ref{sec:conclusion} concludes this article and discusses furth
 Previous work on \agri has shown the importance of low-power wireless technologies~\cite{ojha15wireless}.
 The less current the motes draw, the longer the network operates without changing batteries.
 Wire-like network reliability is important in \agri applications, as the data feeds productivity decision processes and triggers actions in real time.
-One example is frost prediction, as the analysis of sensor data triggers an warnings that goes to the farmer about the imminence of a frost event.
+One example is frost prediction, as the analysis of sensor data triggers a warning that goes to the farmer about the imminence of a frost event.
 Loosing data is not an option.
 The key requirements for a \agri application is low maintenance, energy-efficiency, reliability and ease of operation.
 
@@ -250,7 +250,7 @@ A \smip network exhibits over 99.999\% end-to-end reliability and over a decade 
 Its security solution is NIST certified, and is always on.
 It features secure Over-The-Air Programming (OTAP) out of the box, so it is possible to remotely update the firmware running on devices that are already deployed.
 It is designed and tested to operate in the -40$^{\circ}$C to +85$^{\circ}$C industrial temperature range.
-With over 60,000 networks deployed around the world, and the market leader position, \smip is a proven technology.
+With over 60,000 networks deployed around the world, and its market leader position, \smip is a proven technology.
 
 % programming smip
 
