--- a/brun17using.tex
+++ b/brun17using.tex
@@ -96,7 +96,7 @@ Low-power wireless, \smip, TSCH, 6TiSCH, \agri, \building.
 % agri: problem
 
 Peaches do not like frost.
-If during the blooming season (September in Argentina), temperature gets below $-3^{\circ}C$ for only a couple of hours, the flowers freeze, and no peaches are produced.
+If during the blooming season (September in Argentina), temperature gets below $-$3$^{\circ}C$ for only a couple of hours, the flowers freeze, and no peaches are produced.
 In 2013, 85\% of the peach production in the Mendoza region (Western Argentina) was lost because of frost events.
 Farmers can lose everything in only a couple of hours.
 Yet, if they are warned of a frost event a couple of hours ahead, they can install heaters throughout the orchard, and use big fans to move the hot air around.
@@ -225,7 +225,7 @@ The key requirements for a \agri application is low maintenance, energy-efficien
 Smart buildings save energy by automating controls and optimizing systems.
 This adds value to leasing and sales of properties~\cite{king17smart}.
 \building applications face external interference, as the low-power wireless mesh networks are co-located with other technologies sharing the same frequency bands.
-For example, \smip operates in the same 2.4~GHz band as Wi-Fi and Bluetooth.
+For example, \smip operates in the same 2.4~GHz band as WiFi and Bluetooth.
 On top of the requirements for \agri applications, a solution deployed in a building must be resilient to external interference.
 
 % realworld deployment is hard
@@ -249,7 +249,7 @@ It uses channel-hopping to reduce the impact of multi-path fading and external i
 A \smip network exhibits over 99.999\% end-to-end reliability and over a decade of battery lifetime~\cite{watteyne10mitigating,watteyne09reliability}.
 Its security solution is NIST certified, and is always on.
 It features secure Over-The-Air Programming (OTAP) out of the box, so it is possible to remotely update the firmware running on devices that are already deployed.
-It is designed and tested to operate in the -40$^{\circ}$C to +85$^{\circ}$C industrial temperature range.
+It is designed and tested to operate in the $-$40$^{\circ}$C to $+$85$^{\circ}$C industrial temperature range.
 With over 60,000 networks deployed around the world, and its market leader position, \smip is a proven technology.
 
 % programming smip
@@ -274,7 +274,7 @@ Because of the sunny weather, day/night temperature swings of $10^{\circ}$C are 
 
 The \building network is deployed in the Inria-Paris offices (a research institute) in Paris, France.
 It is deployed in a typical 5-story office building, in which light-material walls separate offices which are arranged around a concrete core which houses the elevators.
-Several wireless technologies operate in the same building, including Wi-Fi, Bluetooth and other IEEE802.15.4-based networks.
+Several wireless technologies operate in the same building, including WiFi, Bluetooth and other IEEE802.15.4-based networks.
 Around 200~people work in that building, with lots of movement and activity during business hours.
 
 % events and HR
@@ -364,18 +364,22 @@ While we generally expect good performance from the network, this section verifi
 
 % remainder
 
-We start by looking at two physical-layer metrics: RSSI vs Distance (Section~\ref{sec:rssi_distance}) and PDR vs. RSSI (Section~\ref{sec:waterfall}).
+We start by looking at two physical-layer metrics:
+    RSSI vs Distance (Section~\ref{sec:rssi_distance}) and
+    PDR vs. RSSI (Section~\ref{sec:waterfall}).
 While these have no dependency on TSCH (the type of medium access), they allow us to verify the overall connectivity in the network.
-We then look at key performance indicators: end-to-end reliability (Section~\ref{sec:net_reliability}) and network lifetime (Section~\ref{sec:lifetime}).
+We then look at key performance indicators:
+    end-to-end reliability (Section~\ref{sec:net_reliability}) and
+    network lifetime (Section~\ref{sec:lifetime}).
 
 %------------------------------------------------------------------------------
 \subsection{RSSI vs. Distance}
 \label{sec:rssi_distance}
 
 The Friis transmission model~\cite{saunders07antennas} gives the relationship between the Received Signal Strength (RSSI)\footnote{~Strictly speaking, the RSSI is the Received Signal Strength \textit{Indicator}, a value returned by the radio chip. Because of its prevalence in low-power wireless literature, we use RSS and RSSI interchangeably.} in free space.
-While the Friis transmission model does \textit{not} apply directly to our real-world deployment \footnote{a Log-Normal model would be more appropriate for indoor environment}, we note in Fig.~\ref{fig:pister_hack} that the individual RSSI values are located between the Friis model, and the Friis model offset by $-$40~dB.
+While the Friis transmission model does \textit{not} apply directly to our real-world deployment\footnote{a Log-Normal model would be more appropriate for indoor environment}, we observe in Fig.~\ref{fig:pister_hack} that the individual RSSI values are located between the Friis model, and the Friis model offset by $-$40~dB.
 This corroborates the results from~\cite{zats10wireless}.
-Variability is lower on the \agri deployment, given that there is almost no environmental change, compared to what happens on the \building deployment where people move around creating rapid fading changes that not possible to catch given our sampling rate.
+Variability is lower on the \agri deployment, given that there is almost no environmental change, compared to what happens on the \building deployment where people move around creating rapid fading changes.
 
 \begin{figure}
     \centering
@@ -387,7 +391,7 @@ Variability is lower on the \agri deployment, given that there is almost no envi
         \includegraphics[width=\textwidth]{pister_hack_building.eps}
         \caption{\building}
     \end{subfigure} 
-    \caption{RSSI measurements are roughly located between the Friis model and the Friis model shifted by $-$40~dB.}
+    \caption{We observe that the RSSI measurements are roughly located between the Friis model and the Friis model shifted by $-$40~dB.}
     \label{fig:pister_hack}
 \end{figure}
 
@@ -447,13 +451,13 @@ This is not the case in any of the two deployments.
 The waterfall plot allows us to assess the level of external interference.
 In the presence of external interference, the waterfall plot is either shifted to the right with very few paths below $-70~dBm$, or does no constantly increase with RSSI.
 
-The waterfall plot in the \agri deployment (Fig.~\ref{fig:waterfall_agri}) is ``clean'', meaning that the \smip network is not experiencing high levels of external interferences from co-located wireless devices.
-Especially when comparing both, the waterfall plot in the \building deployment \textit{is} shifted to the right (Fig.~\ref{fig:waterfall_agri}), indicating the \smip network is experiencing external interferences.
+The waterfall plot in the \agri deployment (Fig.~\ref{fig:waterfall_agri}) is ``clean'', meaning that the \smip network is not experiencing high levels of external interference from co-located wireless devices.
+Especially when comparing both, the waterfall plot in the \building deployment \textit{is} shifted to the right (Fig.~\ref{fig:waterfall_agri}), indicating the \smip network is experiencing external interference.
 This is expected, as several hundred WiFi devices and tens of WiFi access points are operating in the building on IEEE802.11 channels 1, 6 and 11.
 
-A new type of Health Report was recently added to \smip allowing us to measure the link quality per channel.
-The \HREXTENDED are generated by each mote every 20~minutes and give a counter of transmission attempts and transmission failures per channel, allowing us to calculate the PDR per channel for each mote.
-Figure~\ref{fig:heatmap} shows the average PDR collected over a 24-hours period on a business day.
+A fourth type of Health Report allows us to measure the link quality per channel.
+The \HREXTENDED are generated by each mote every 20~minutes and indicate the number of transmission attempts and link-layer retransmissions \textit{for each frequency}, allowing us to calculate the PDR per channel for each mote.
+Fig.~\ref{fig:heatmap} shows the average PDR collected over a 24-hour period on a business day.
 During that period, 1402~\HREXTENDED were collected.
 We can clearly observe the PDR drop of the IEEE802.15.4 links that share the same channel bands as IEEE802.11.
 
@@ -461,7 +465,7 @@ Yet, despite the high external interference, the \building deployment exhibits 1
 
 \begin{figure}  
     \includegraphics[width=\columnwidth]{heatmap.png}
-    \caption{Nearby IEEE802.11 networks impact the performance of the deployment}
+    \caption{In the \building deployment, external inteference from nearby WiFi devices causes some retries (the PDR is lower) \textit{without} impacting end-to-end reliability which stays at 100\% (see Section~\ref{sec:net_reliability}).}
     \label{fig:heatmap}
 \end{figure}
 
