--- a/brun17using.tex
+++ b/brun17using.tex
@@ -519,36 +519,36 @@ This number allows us to predict the lifetime of the device.
 % results
 
 Table~\ref{tab:stats_charge} shows charge consumed by the motes over the two 3~month periods.
-Assuming a relatively constant energy consumption rate, we extrapolate the lifetime.
+Assuming a constant energy consumption rate, we extrapolate the lifetime.
 The nodes with the longest lifetime (8~years) are all leaf nodes as we can see from Fig.~\ref{fig:maps}.
 Since they do not have to relay data from any children, it is expected for these motes to consume the least.
 The mote with the shortest lifetime is {\tt 30-60-ef}, with a 4~year battery lifetime.
 This is expected, as this mote relays an important amount of data.
-This confirms the ultra-low power consumption of the \smip network.
+This confirms the ultra-low power consumption nature of the \smip network.
 
 \begin{table}
 \begin{subtable}{.5\textwidth}
     \begin{tabular}{|c|c|r|}
         \toprule
-        MAC           &  charge  & lifetime \\
+        MAC           &  charge          & lifetime \\
                       & consumed$^\star$ &          \\
         \midrule
-        \tt{30-60-ef} &          695 KC &  4 years \\
-        \tt{38-0f-66} &          461 KC &  6 years \\
-        \tt{3f-f8-20} &          380 KC &  8 years \\
-        \tt{3f-fe-87} &          549 KC &  5 years \\
-        \tt{3f-fe-88} &          718 KC &  4 years \\
-        \tt{58-32-36} &          311 KC &  7 years \\
-        \tt{60-01-f8} &          387 KC &  8 years \\
-        \tt{60-02-1b} &          371 KC &  8 years \\
-        \tt{60-02-4b} &          406 KC &  7 years \\
-        \tt{60-03-82} &          395 KC &  8 years \\
-        \tt{60-05-5f} &          386 KC &  8 years \\
-        \tt{60-05-69} &          509 KC &  6 years \\
-        \tt{60-05-78} &          364 KC &  8 years \\
-        \tt{60-05-ab} &          381 KC &  8 years \\
-        \tt{60-06-27} &          422 KC &  7 years \\
-        \tt{60-08-d5} &          432 KC &  7 years \\
+        \tt{30-60-ef} &            695~C &  4~years \\
+        \tt{38-0f-66} &            461~C &  6~years \\
+        \tt{3f-f8-20} &            380~C &  8~years \\
+        \tt{3f-fe-87} &            549~C &  5~years \\
+        \tt{3f-fe-88} &            718~C &  4~years \\
+        \tt{58-32-36} &            311~C &  7~years \\
+        \tt{60-01-f8} &            387~C &  8~years \\
+        \tt{60-02-1b} &            371~C &  8~years \\
+        \tt{60-02-4b} &            406~C &  7~years \\
+        \tt{60-03-82} &            395~C &  8~years \\
+        \tt{60-05-5f} &            386~C &  8~years \\
+        \tt{60-05-69} &            509~C &  6~years \\
+        \tt{60-05-78} &            364~C &  8~years \\
+        \tt{60-05-ab} &            381~C &  8~years \\
+        \tt{60-06-27} &            422~C &  7~years \\
+        \tt{60-08-d5} &            432~C &  7~years \\
         \bottomrule
     \end{tabular}
     \caption{\agri}
@@ -556,32 +556,32 @@ This confirms the ultra-low power consumption of the \smip network.
 \begin{subtable}{.43\textwidth}
     \begin{tabular}{|c|c|c|}
         \toprule
-        MAC           &  charge  & lifetime \\
+        MAC           &  charge          & lifetime \\
                       & consumed$^\star$ &          \\
         \midrule
-        \tt{38-03-dd} &          459 KC &  5 years \\
-        \tt{58-e9-ca} &          411 KC &  6 years \\
-        \tt{58-e9-cb} &          407 KC &  6 years \\
-        \tt{58-eb-5b} &          423 KC &  6 years \\
-        \tt{58-eb-64} &          322 KC &  8 years \\
-        \tt{58-eb-67} &          468 KC &  5 years \\
-        \tt{58-eb-69} &          243 KC &  7 years \\
-        \tt{58-f3-17} &          357 KC &  7 years \\
-        \tt{58-f4-f8} &          402 KC &  6 years \\
-        \tt{58-f5-23} &          416 KC &  6 years \\
-        \tt{58-f5-3c} &          412 KC &  6 years \\
-        \tt{58-f5-58} &          387 KC &  6 years \\
-        \tt{58-f8-63} &          198 KC &  9 years \\
-        \tt{58-f8-78} &          233 KC &  7 years \\
-        \tt{58-f8-8f} &          439 KC &  6 years \\
-        \tt{58-f9-c4} &          325 KC &  8 years \\
+        \tt{38-03-dd} &            459~C &  5~years \\
+        \tt{58-e9-ca} &            411~C &  6~years \\
+        \tt{58-e9-cb} &            407~C &  6~years \\
+        \tt{58-eb-5b} &            423~C &  6~years \\
+        \tt{58-eb-64} &            322~C &  8~years \\
+        \tt{58-eb-67} &            468~C &  5~years \\
+        \tt{58-eb-69} &            243~C &  7~years \\
+        \tt{58-f3-17} &            357~C &  7~years \\
+        \tt{58-f4-f8} &            402~C &  6~years \\
+        \tt{58-f5-23} &            416~C &  6~years \\
+        \tt{58-f5-3c} &            412~C &  6~years \\
+        \tt{58-f5-58} &            387~C &  6~years \\
+        \tt{58-f8-63} &            198~C &  9~years \\
+        \tt{58-f8-78} &            233~C &  7~years \\
+        \tt{58-f8-8f} &            439~C &  6~years \\
+        \tt{58-f9-c4} &            325~C &  8~years \\
         \bottomrule
     \end{tabular}
     \caption{\building}
 \end{subtable}\hfill
 \vspace{2mm}
-$^\star$~over the 3.5 months and 3 months periods respectively.
-\caption{Per-node power consumption and associated expected lifetime when powered by a pair of AA batteries.}
+$^\star$~over the 3.5~month and 3~month periods, respectively.
+\caption{Per-node charge consumed and associated expected lifetime when powered by a pair of AA batteries.}
 \label{tab:stats_charge}
 \end{table}
 
